--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-C:\Users\Andromeda\Desktop\GitHub\Data-Structures-and-Algorithm-Tutorial\lecture\solution_open_ended_3.md
+lecture\open_ended_project_solution_3.md
